Your commit message here

--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ body {
 
 .stats-container {
     display: flex;
+    justify-content: space-between;
+    align-items:center;
+    padding: 20x;
+    cursor: pointer;
+    box-shadow: 0 0 30px lightblue;
 }
 
 .stats-card {
